# dart

./: .clang-format  .gitignore  Brewfile  CMakeLists.txt  Dockerfile  codecov.yml  package.xml  setup.py
.ci/: build.sh
.ci/docker/: env.list
.github/workflows/: build_farm.yml  ci_archlinux.yml  ci_macos.yml  ci_ubuntu.yml  ci_windows.yml
benchmarks/: CMakeLists.txt
benchmarks/integration/: CMakeLists.txt  benchmark_empty.cpp
benchmarks/unit/: CMakeLists.txt
cmake/: DARTDependencies.cmake  DARTFindBoost.cmake  DARTFindDependencies.cmake  DARTFindODE.cmake  DARTFindfmt.cmake  DARTFindyaml-cpp.cmake  DARTFunctions.cmake  DARTMacros.cmake  DARTSIMConfig.cmake.in  dart.pc.in  dart_fetch_at_configure_step.cmake.in  dart_fetch_git_repo.cmake
cpp/: CMakeLists.txt
cpp/application/: CMakeLists.txt
cpp/application/collision/: CMakeLists.txt  collision_scene_node.cpp  collision_scene_node.hpp  collision_scene_viewer.cpp  collision_scene_viewer.hpp  main_collision.cpp
cpp/example/: CMakeLists.txt
cpp/example/collision/: CMakeLists.txt  main_collision.cpp
cpp/example/raylib/: CMakeLists.txt  main_raylib.cpp
cpp/example/simple_simulator/: main_simple_simulator.cpp
cpp/src/: CMakeLists.txt
dart/: CMakeLists.txt  config.hpp.in
dart/collision/: CMakeLists.txt  collision_filter.cpp  collision_filter.hpp  collision_option.cpp  collision_option.hpp  collision_result.cpp  collision_result.hpp  contact.cpp  contact.hpp  contact_shape.cpp  contact_shape.hpp  engine.cpp  engine.hpp  group.cpp  group.hpp  narrow_phase_interface.cpp  narrow_phase_interface.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  type.hpp
dart/common/: Array.cpp  Array.hpp  Aspect.cpp  Aspect.hpp  AspectWithVersion.hpp  Bit.hpp  CAllocator.cpp  CAllocator.hpp  CMakeLists.txt  Castable.hpp  Cloneable.hpp  Compiler.hpp  Composite.cpp  Composite.hpp  Console.hpp  Deprecated.hpp  EmbeddedAspect.hpp  Empty.hpp  FreeListAllocator.cpp  (+102 more)
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
doxygen/: Doxyfile.in  mainpage.dox
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt
log/: latest_build
python/: CMakeLists.txt
python/dartpy/: CMakeLists.txt  dartpy.cpp  eigen_geometry_pybind.h  eigen_pybind.h
python/dartpy/collision/: py_collision_option.cpp  py_engine.cpp  py_fcl_engine.cpp  py_module.cpp  py_narrow_phase_interface.cpp  py_object.cpp  py_ode_engine.cpp
python/dartpy/common/: Uri.cpp
python/dartpy/constraint/: ConstraintSolver.cpp
python/dartpy/dynamics/: BallJoint.cpp  BodyNode.cpp  BoxedLcpConstraintSolver.cpp  BoxedLcpSolver.cpp  BulletCollisionDetector.cpp  BulletCollisionGroup.cpp  Chain.cpp  CollisionDetector.cpp  CollisionFilter.cpp  CollisionGroup.cpp  CollisionObject.cpp  CollisionOption.cpp  CollisionResult.cpp  ConstraintBase.cpp  ConstraintSolver.cpp  DARTCollisionDetector.cpp  DantzigBoxedLcpSolver.cpp  DegreeOfFreedom.cpp  DistanceResult.cpp  DynamicJointConstraint.cpp  Entity.cpp  EulerJoint.cpp  FCLCollisionDetector.cpp  Frame.cpp  FreeJoint.cpp  GenericJoint.cpp  InverseKinematics.cpp  JacobianNode.cpp  JointConstraint.cpp  JointCoulombFrictionConstraint.cpp  Linkage.cpp  MetaSkeleton.cpp  Node.cpp  OdeCollisionDetector.cpp  OdeCollisionGroup.cpp  PgsBoxedLcpSolver.cpp  PlanarJoint.cpp  PrismaticJoint.cpp  RaycastResult.cpp  ReferentialSkeleton.cpp  (+12 more)
python/dartpy/gui/osg/: DragAndDrop.cpp  GUIEventHandler.cpp  ImGuiHandler.cpp  ImGuiViewer.cpp  ImGuiWidget.cpp  InteractiveFrame.cpp  RealTimeWorldNode.cpp  Viewer.cpp  ViewerAttachment.cpp  WorldNode.cpp
python/dartpy/io/: DartLoader.cpp  module.cpp
python/dartpy/math/: Geometry.cpp  Random.cpp  module.cpp  py_r.cpp  py_se3.cpp  py_so3.cpp  py_spatial_jacobian.cpp  py_t.cpp
python/dartpy/multibody/: py_frame.cpp  py_module.cpp
python/dartpy/optimization/: Function.cpp  GradientDescentSolver.cpp  NloptSolver.cpp  Problem.cpp  Solver.cpp
python/dartpy/simulation/: World.cpp
python/examples/: CMakeLists.txt
python/src/: eigen_geometry_pybind.h  eigen_pybind.h
python/src/math/: py_so3.cpp
python/tests/: CMakeLists.txt
python/tests/unit/dynamics/: test_collision.py
python/tests/unit/math/: py_test_so3.py  test_so3.py
python/tests/unit/multibody/: py_test_frame.py
python/tutorials/: CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_Collision.cpp  test_Common.cpp  test_Constraint.cpp  test_Dynamics.cpp  test_IkFast.cpp  test_MultiObjectiveOptimization.cpp  test_SoftDynamics.cpp
tests/src/dart/test/dynamics/: TestHelpers.hpp
tests/src/dart/test/io/: TestHelpers.hpp
tests/src/dart/test/math/: GTestUtils.hpp
tests/unit/: CMakeLists.txt
tests/unit/collision/: test_broad_phase_interface.cpp  test_narrow_phase_interface.cpp
tests/unit/collision/fcl/: test_fcl_conversion.cpp
tests/unit/common/: test_Factory.cpp  test_LocalResourceRetriever.cpp  test_Signal.cpp  test_Uri.cpp  test_aligned_allocator.cpp  test_allocator.cpp  test_config.cpp  test_heap_allocator.cpp  test_linear_allocator.cpp  test_logging.cpp  test_memory_alignment.cpp  test_pool_allocator.cpp  test_smart_pointer.cpp  test_stack_allocator.cpp  test_string.cpp
tests/unit/dynamics/: GeneratedWamIkFast.cpp  SharedLibraryWamIkFast.cpp  SharedLibraryWamIkFast.hpp  test_GenericJoints.cpp  test_Icosphere.cpp  test_Inertia.cpp  test_ScrewJoint.cpp  test_frame.cpp
tests/unit/io/: test_CompositeResourceRetriever.cpp  test_DartLoader.cpp  test_DartResourceRetriever.cpp  test_FileInfoWorld.cpp  test_MjcfParser.cpp  test_PackageResourceRetriever.cpp  test_SdfParser.cpp  test_SkelParser.cpp  test_VskParser.cpp
tests/unit/math/: test_Geometry.cpp  test_Icosphere.cpp  test_Lemke.cpp  test_Math.cpp  test_Random.cpp  test_TriMesh.cpp
tests/unit/math/lie_group/: test_product_lie_group.cpp  test_r.cpp  test_se3.cpp  test_so3.cpp  test_spatial_inertia.cpp
tests/unit/multibody/: CMakeLists.txt  test_frame.cpp  test_multibody_tree.cpp  test_single_body.cpp
tests/unit/optimization/: test_Optimization.cpp
tests/unit/planning/: test_NearestNeighbor.cpp
tools/: code_check.sh  run
(+1012 files in other folders)
